--- a/Capa Negocio/Capa Negocio.csproj
+++ b/Capa Negocio/Capa Negocio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\CBusqueda.cs" />
     <Compile Include="Repositorio\CConexion.cs" />
+    <Compile Include="Repositorio\CEliminacion.cs" />
     <Compile Include="Repositorio\CRegistro.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
